Fri Mar  6 18:53:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTPortableServer.mpc:
          Also disable the idl project with CORBA/e micro

Fri Mar  6 17:28:09 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/DynamicInterface/DII_Invocation_Adapter.cpp:

          This is an extension of the change in:
          Mon Sep  1 20:18:51 UTC 2008  Ciju John  <johnc at ociweb dot com>
          There are two classes in this file, DII_Invocation_Adapter and
          DII_Deferred_Invocation_Adapter.  This commit applies the same change
          to DII_Deferred_Invocation_Adapter.

Fri Mar  6 07:41:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging.mpc
          Added missing file

Thu Mar  5 23:54:00 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Validate_Client_Task.h:
          Correct build issue related to versioned namespace.

Thu Mar  5 20:39:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/ZIOP/ZIOP.cpp
          Resolved compiler warning

Thu Mar  5 19:56:32 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.cpp:
        * orbsvcs/orbsvcs/Notify/EventChannel.h:
        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/EventChannelFactory.h:
        * orbsvcs/orbsvcs/Notify/EventChannelFactory.cpp:
        * orbsvcs/orbsvcs/Notify/FilterAdmin.h:
        * orbsvcs/orbsvcs/Notify/FilterAdmin.cpp:
        * orbsvcs/orbsvcs/Notify/ProxyConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/ProxySupplier.cpp:

          - Reverted to following commit to have filter factory per event
            channel.
            Mon Mar 17 13:39:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
               * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
               * orbsvcs/orbsvcs/Notify/EventChannel.h:
                 Create a filter factory for each event channel instead
                 of a global singleton
